# YATRT

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.c
include/: camera.h  color.h  common.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  sphere.h  vec2.h  vec3.h
include/camera/: camera.h
include/color/: color.h
include/common/: common.h  interval.h
include/hittable/: hittable.h  hittable_list.h
include/material/: material.h
include/ray/: ray.h
include/render/: render.h
include/sphere/: sphere.h
include/vec3/: vec3.h
src/: camera.c  color.c  hittable.c  hittable_list.c  main.c  material.c  ray.c  render.c  sphere.c  vec3.c
